steel.peg.go
package main

import (
	"fmt"
	"math"
	"sort"
	"strconv"
)

const endSymbol rune = 1114112

/* The rule types inferred from the grammar are below. */
type pegRule uint8

const (
	ruleUnknown pegRule = iota
	ruleProgram
	ruleStatement
	ruleCom
	ruleExternal
	ruleExternalBlock
	ruleExternalDef
	ruleExternalArgument
	ruleExpression
	ruleReturn
	ruleAssignation
	ruleAssignable
	ruleNew
	ruleComputedProperty
	ruleBraceComputedProperty
	ruleDotComputedProperty
	ruleComputedPropertyUnderef
	ruleBraceComputedPropertyUnderef
	ruleDotComputedPropertyUnderef
	ruleObject
	ruleObjectInline
	ruleObjectBlock
	ruleObjectProperty
	ruleIf
	ruleElseIf
	ruleElse
	ruleBoolTest
	ruleClass
	ruleClassBlock
	ruleClassEntry
	ruleArray
	ruleArrayElem
	ruleOperation
	ruleOperand
	ruleOperator
	ruleFunctionDeclaration
	ruleArguments
	ruleArgumentDecl
	ruleNoReturn
	ruleBlock
	ruleFunctionCall
	ruleArgument
	ruleIdentifier
	ruleVarUse
	ruleType
	ruleArrayType
	ruleFuncType
	ruleFuncTypeArg
	ruleLiteral
	ruleDecimal
	ruleString
)

var rul3s = [...]string{
	"Unknown",
	"Program",
	"Statement",
	"Com",
	"External",
	"ExternalBlock",
	"ExternalDef",
	"ExternalArgument",
	"Expression",
	"Return",
	"Assignation",
	"Assignable",
	"New",
	"ComputedProperty",
	"BraceComputedProperty",
	"DotComputedProperty",
	"ComputedPropertyUnderef",
	"BraceComputedPropertyUnderef",
	"DotComputedPropertyUnderef",
	"Object",
	"ObjectInline",
	"ObjectBlock",
	"ObjectProperty",
	"If",
	"ElseIf",
	"Else",
	"BoolTest",
	"Class",
	"ClassBlock",
	"ClassEntry",
	"Array",
	"ArrayElem",
	"Operation",
	"Operand",
	"Operator",
	"FunctionDeclaration",
	"Arguments",
	"ArgumentDecl",
	"NoReturn",
	"Block",
	"FunctionCall",
	"Argument",
	"Identifier",
	"VarUse",
	"Type",
	"ArrayType",
	"FuncType",
	"FuncTypeArg",
	"Literal",
	"Decimal",
	"String",
}

type token32 struct {
	pegRule
	begin, end uint32
}

func (t *token32) String() string {
	return fmt.Sprintf("\x1B[34m%v\x1B[m %v %v", rul3s[t.pegRule], t.begin, t.end)
}

type node32 struct {
	token32
	up, next *node32
}

func (node *node32) print(pretty bool, buffer string) {
	var print func(node *node32, depth int)
	print = func(node *node32, depth int) {
		for node != nil {
			for c := 0; c < depth; c++ {
				fmt.Printf(" ")
			}
			rule := rul3s[node.pegRule]
			quote := strconv.Quote(string(([]rune(buffer)[node.begin:node.end])))
			if !pretty {
				fmt.Printf("%v %v\n", rule, quote)
			} else {
				fmt.Printf("\x1B[34m%v\x1B[m %v\n", rule, quote)
			}
			if node.up != nil {
				print(node.up, depth+1)
			}
			node = node.next
		}
	}
	print(node, 0)
}

func (node *node32) Print(buffer string) {
	node.print(false, buffer)
}

func (node *node32) PrettyPrint(buffer string) {
	node.print(true, buffer)
}

type tokens32 struct {
	tree []token32
}

func (t *tokens32) Trim(length uint32) {
	t.tree = t.tree[:length]
}

func (t *tokens32) Print() {
	for _, token := range t.tree {
		fmt.Println(token.String())
	}
}

func (t *tokens32) AST() *node32 {
	type element struct {
		node *node32
		down *element
	}
	tokens := t.Tokens()
	var stack *element
	for _, token := range tokens {
		if token.begin == token.end {
			continue
		}
		node := &node32{token32: token}
		for stack != nil && stack.node.begin >= token.begin && stack.node.end <= token.end {
			stack.node.next = node.up
			node.up = stack.node
			stack = stack.down
		}
		stack = &element{node: node, down: stack}
	}
	if stack != nil {
		return stack.node
	}
	return nil
}

func (t *tokens32) PrintSyntaxTree(buffer string) {
	t.AST().Print(buffer)
}

func (t *tokens32) PrettyPrintSyntaxTree(buffer string) {
	t.AST().PrettyPrint(buffer)
}

func (t *tokens32) Add(rule pegRule, begin, end, index uint32) {
	if tree := t.tree; int(index) >= len(tree) {
		expanded := make([]token32, 2*len(tree))
		copy(expanded, tree)
		t.tree = expanded
	}
	t.tree[index] = token32{
		pegRule: rule,
		begin:   begin,
		end:     end,
	}
}

func (t *tokens32) Tokens() []token32 {
	return t.tree
}

type Steel struct {
	Buffer string
	buffer []rune
	rules  [51]func() bool
	parse  func(rule ...int) error
	reset  func()
	Pretty bool
	tokens32
}

func (p *Steel) Parse(rule ...int) error {
	return p.parse(rule...)
}

func (p *Steel) Reset() {
	p.reset()
}

type textPosition struct {
	line, symbol int
}

type textPositionMap map[int]textPosition

func translatePositions(buffer []rune, positions []int) textPositionMap {
	length, translations, j, line, symbol := len(positions), make(textPositionMap, len(positions)), 0, 1, 0
	sort.Ints(positions)

search:
	for i, c := range buffer {
		if c == '\n' {
			line, symbol = line+1, 0
		} else {
			symbol++
		}
		if i == positions[j] {
			translations[positions[j]] = textPosition{line, symbol}
			for j++; j < length; j++ {
				if i != positions[j] {
					continue search
				}
			}
			break search
		}
	}

	return translations
}

type parseError struct {
	p   *Steel
	max token32
}

func (e *parseError) Error() string {
	tokens, error := []token32{e.max}, "\n"
	positions, p := make([]int, 2*len(tokens)), 0
	for _, token := range tokens {
		positions[p], p = int(token.begin), p+1
		positions[p], p = int(token.end), p+1
	}
	translations := translatePositions(e.p.buffer, positions)
	format := "parse error near %v (line %v symbol %v - line %v symbol %v):\n%v\n"
	if e.p.Pretty {
		format = "parse error near \x1B[34m%v\x1B[m (line %v symbol %v - line %v symbol %v):\n%v\n"
	}
	for _, token := range tokens {
		begin, end := int(token.begin), int(token.end)
		error += fmt.Sprintf(format,
			rul3s[token.pegRule],
			translations[begin].line, translations[begin].symbol,
			translations[end].line, translations[end].symbol,
			strconv.Quote(string(e.p.buffer[begin:end])))
	}

	return error
}

func (p *Steel) PrintSyntaxTree() {
	if p.Pretty {
		p.tokens32.PrettyPrintSyntaxTree(p.Buffer)
	} else {
		p.tokens32.PrintSyntaxTree(p.Buffer)
	}
}

func (p *Steel) Init() {
	var (
		max                  token32
		position, tokenIndex uint32
		buffer               []rune
	)
	p.reset = func() {
		max = token32{}
		position, tokenIndex = 0, 0

		p.buffer = []rune(p.Buffer)
		if len(p.buffer) == 0 || p.buffer[len(p.buffer)-1] != endSymbol {
			p.buffer = append(p.buffer, endSymbol)
		}
		buffer = p.buffer
	}
	p.reset()

	_rules := p.rules
	tree := tokens32{tree: make([]token32, math.MaxInt16)}
	p.parse = func(rule ...int) error {
		r := 1
		if len(rule) > 0 {
			r = rule[0]
		}
		matches := p.rules[r]()
		p.tokens32 = tree
		if matches {
			p.Trim(tokenIndex)
			return nil
		}
		return &parseError{p, max}
	}

	add := func(rule pegRule, begin uint32) {
		tree.Add(rule, begin, position, tokenIndex)
		tokenIndex++
		if begin != position && position > max.end {
			max = token32{rule, begin, position}
		}
	}

	matchDot := func() bool {
		if buffer[position] != endSymbol {
			position++
			return true
		}
		return false
	}

	/*matchChar := func(c byte) bool {
		if buffer[position] == c {
			position++
			return true
		}
		return false
	}*/

	/*matchRange := func(lower byte, upper byte) bool {
		if c := buffer[position]; c >= lower && c <= upper {
			position++
			return true
		}
		return false
	}*/

	_rules = [...]func() bool{
		nil,
		/* 0 Program <- <Statement+> */
		func() bool {
			position0, tokenIndex0 := position, tokenIndex
			{
				position1 := position
				if !_rules[ruleStatement]() {
					goto l0
				}
			l2:
				{
					position3, tokenIndex3 := position, tokenIndex
					if !_rules[ruleStatement]() {
						goto l3
					}
					goto l2
				l3:
					position, tokenIndex = position3, tokenIndex3
				}
				add(ruleProgram, position1)
			}
			return true
		l0:
			position, tokenIndex = position0, tokenIndex0
			return false
		},
		/* 1 Statement <- <((Com / External / Expression)? Com? '\n')> */
		func() bool {
			position4, tokenIndex4 := position, tokenIndex
			{
				position5 := position
				{
					position6, tokenIndex6 := position, tokenIndex
					{
						position8, tokenIndex8 := position, tokenIndex
						if !_rules[ruleCom]() {
							goto l9
						}
						goto l8
					l9:
						position, tokenIndex = position8, tokenIndex8
						if !_rules[ruleExternal]() {
							goto l10
						}
						goto l8
					l10:
						position, tokenIndex = position8, tokenIndex8
						if !_rules[ruleExpression]() {
							goto l6
						}
					}
				l8:
					goto l7
				l6:
					position, tokenIndex = position6, tokenIndex6
				}
			l7:
				{
					position11, tokenIndex11 := position, tokenIndex
					if !_rules[ruleCom]() {
						goto l11
					}
					goto l12
				l11:
					position, tokenIndex = position11, tokenIndex11
				}
			l12:
				if buffer[position] != rune('\n') {
					goto l4
				}
				position++
				add(ruleStatement, position5)
			}
			return true
		l4:
			position, tokenIndex = position4, tokenIndex4
			return false
		},
		/* 2 Com <- <(' '* '#' (!'\n' .)*)> */
		func() bool {
			position13, tokenIndex13 := position, tokenIndex
			{
				position14 := position
			l15:
				{
					position16, tokenIndex16 := position, tokenIndex
					if buffer[position] != rune(' ') {
						goto l16
					}
					position++
					goto l15
				l16:
					position, tokenIndex = position16, tokenIndex16
				}
				if buffer[position] != rune('#') {
					goto l13
				}
				position++
			l17:
				{
					position18, tokenIndex18 := position, tokenIndex
					{
						position19, tokenIndex19 := position, tokenIndex
						if buffer[position] != rune('\n') {
							goto l19
						}
						position++
						goto l18
					l19:
						position, tokenIndex = position19, tokenIndex19
					}
					if !matchDot() {
						goto l18
					}
					goto l17
				l18:
					position, tokenIndex = position18, tokenIndex18
				}
				add(ruleCom, position14)
			}
			return true
		l13:
			position, tokenIndex = position13, tokenIndex13
			return false
		},
		/* 3 External <- <(('e' / 'E') ('x' / 'X') ('t' / 'T') ('e' / 'E') ('r' / 'R') ('n' / 'N') ('a' / 'A') ('l' / 'L') ExternalBlock)> */
		func() bool {
			position20, tokenIndex20 := position, tokenIndex
			{
				position21 := position
				{
					position22, tokenIndex22 := position, tokenIndex
					if buffer[position] != rune('e') {
						goto l23
					}
					position++
					goto l22
				l23:
					position, tokenIndex = position22, tokenIndex22
					if buffer[position] != rune('E') {
						goto l20
					}
					position++
				}
			l22:
				{
					position24, tokenIndex24 := position, tokenIndex
					if buffer[position] != rune('x') {
						goto l25
					}
					position++
					goto l24
				l25:
					position, tokenIndex = position24, tokenIndex24
					if buffer[position] != rune('X') {
						goto l20
					}
					position++
				}
			l24:
				{
					position26, tokenIndex26 := position, tokenIndex
					if buffer[position] != rune('t') {
						goto l27
					}
					position++
					goto l26
				l27:
					position, tokenIndex = position26, tokenIndex26
					if buffer[position] != rune('T') {
						goto l20
					}
					position++
				}
			l26:
				{
					position28, tokenIndex28 := position, tokenIndex
					if buffer[position] != rune('e') {
						goto l29
					}
					position++
					goto l28
				l29:
					position, tokenIndex = position28, tokenIndex28
					if buffer[position] != rune('E') {
						goto l20
					}
					position++
				}
			l28:
				{
					position30, tokenIndex30 := position, tokenIndex
					if buffer[position] != rune('r') {
						goto l31
					}
					position++
					goto l30
				l31:
					position, tokenIndex = position30, tokenIndex30
					if buffer[position] != rune('R') {
						goto l20
					}
					position++
				}
			l30:
				{
					position32, tokenIndex32 := position, tokenIndex
					if buffer[position] != rune('n') {
						goto l33
					}
					position++
					goto l32
				l33:
					position, tokenIndex = position32, tokenIndex32
					if buffer[position] != rune('N') {
						goto l20
					}
					position++
				}
			l32:
				{
					position34, tokenIndex34 := position, tokenIndex
					if buffer[position] != rune('a') {
						goto l35
					}
					position++
					goto l34
				l35:
					position, tokenIndex = position34, tokenIndex34
					if buffer[position] != rune('A') {
						goto l20
					}
					position++
				}
			l34:
				{
					position36, tokenIndex36 := position, tokenIndex
					if buffer[position] != rune('l') {
						goto l37
					}
					position++
					goto l36
				l37:
					position, tokenIndex = position36, tokenIndex36
					if buffer[position] != rune('L') {
						goto l20
					}
					position++
				}
			l36:
				if !_rules[ruleExternalBlock]() {
					goto l20
				}
				add(ruleExternal, position21)
			}
			return true
		l20:
			position, tokenIndex = position20, tokenIndex20
			return false
		},
		/* 4 ExternalBlock <- <('@' '{' '@' '\n' ExternalDef+ ('@' '}' '@'))> */
		func() bool {
			position38, tokenIndex38 := position, tokenIndex
			{
				position39 := position
				if buffer[position] != rune('@') {
					goto l38
				}
				position++
				if buffer[position] != rune('{') {
					goto l38
				}
				position++
				if buffer[position] != rune('@') {
					goto l38
				}
				position++
				if buffer[position] != rune('\n') {
					goto l38
				}
				position++
				if !_rules[ruleExternalDef]() {
					goto l38
				}
			l40:
				{
					position41, tokenIndex41 := position, tokenIndex
					if !_rules[ruleExternalDef]() {
						goto l41
					}
					goto l40
				l41:
					position, tokenIndex = position41, tokenIndex41
				}
				if buffer[position] != rune('@') {
					goto l38
				}
				position++
				if buffer[position] != rune('}') {
					goto l38
				}
				position++
				if buffer[position] != rune('@') {
					goto l38
				}
				position++
				add(ruleExternalBlock, position39)
			}
			return true
		l38:
			position, tokenIndex = position38, tokenIndex38
			return false
		},
		/* 5 ExternalDef <- <(Identifier '(' ExternalArgument? ')' ':' Type '\n')> */
		func() bool {
			position42, tokenIndex42 := position, tokenIndex
			{
				position43 := position
				if !_rules[ruleIdentifier]() {
					goto l42
				}
				if buffer[position] != rune('(') {
					goto l42
				}
				position++
				{
					position44, tokenIndex44 := position, tokenIndex
					if !_rules[ruleExternalArgument]() {
						goto l44
					}
					goto l45
				l44:
					position, tokenIndex = position44, tokenIndex44
				}
			l45:
				if buffer[position] != rune(')') {
					goto l42
				}
				position++
				if buffer[position] != rune(':') {
					goto l42
				}
				position++
				if !_rules[ruleType]() {
					goto l42
				}
				if buffer[position] != rune('\n') {
					goto l42
				}
				position++
				add(ruleExternalDef, position43)
			}
			return true
		l42:
			position, tokenIndex = position42, tokenIndex42
			return false
		},
		/* 6 ExternalArgument <- <(Type (',' ExternalArgument)?)> */
		func() bool {
			position46, tokenIndex46 := position, tokenIndex
			{
				position47 := position
				if !_rules[ruleType]() {
					goto l46
				}
				{
					position48, tokenIndex48 := position, tokenIndex
					if buffer[position] != rune(',') {
						goto l48
					}
					position++
					if !_rules[ruleExternalArgument]() {
						goto l48
					}
					goto l49
				l48:
					position, tokenIndex = position48, tokenIndex48
				}
			l49:
				add(ruleExternalArgument, position47)
			}
			return true
		l46:
			position, tokenIndex = position46, tokenIndex46
			return false
		},
		/* 7 Expression <- <(Class / Return / If / Assignation / Assignable)> */
		func() bool {
			position50, tokenIndex50 := position, tokenIndex
			{
				position51 := position
				{
					position52, tokenIndex52 := position, tokenIndex
					if !_rules[ruleClass]() {
						goto l53
					}
					goto l52
				l53:
					position, tokenIndex = position52, tokenIndex52
					if !_rules[ruleReturn]() {
						goto l54
					}
					goto l52
				l54:
					position, tokenIndex = position52, tokenIndex52
					if !_rules[ruleIf]() {
						goto l55
					}
					goto l52
				l55:
					position, tokenIndex = position52, tokenIndex52
					if !_rules[ruleAssignation]() {
						goto l56
					}
					goto l52
				l56:
					position, tokenIndex = position52, tokenIndex52
					if !_rules[ruleAssignable]() {
						goto l50
					}
				}
			l52:
				add(ruleExpression, position51)
			}
			return true
		l50:
			position, tokenIndex = position50, tokenIndex50
			return false
		},
		/* 8 Return <- <(('r' / 'R') ('e' / 'E') ('t' / 'T') ('u' / 'U') ('r' / 'R') ('n' / 'N') Assignable)> */
		func() bool {
			position57, tokenIndex57 := position, tokenIndex
			{
				position58 := position
				{
					position59, tokenIndex59 := position, tokenIndex
					if buffer[position] != rune('r') {
						goto l60
					}
					position++
					goto l59
				l60:
					position, tokenIndex = position59, tokenIndex59
					if buffer[position] != rune('R') {
						goto l57
					}
					position++
				}
			l59:
				{
					position61, tokenIndex61 := position, tokenIndex
					if buffer[position] != rune('e') {
						goto l62
					}
					position++
					goto l61
				l62:
					position, tokenIndex = position61, tokenIndex61
					if buffer[position] != rune('E') {
						goto l57
					}
					position++
				}
			l61:
				{
					position63, tokenIndex63 := position, tokenIndex
					if buffer[position] != rune('t') {
						goto l64
					}
					position++
					goto l63
				l64:
					position, tokenIndex = position63, tokenIndex63
					if buffer[position] != rune('T') {
						goto l57
					}
					position++
				}
			l63:
				{
					position65, tokenIndex65 := position, tokenIndex
					if buffer[position] != rune('u') {
						goto l66
					}
					position++
					goto l65
				l66:
					position, tokenIndex = position65, tokenIndex65
					if buffer[position] != rune('U') {
						goto l57
					}
					position++
				}
			l65:
				{
					position67, tokenIndex67 := position, tokenIndex
					if buffer[position] != rune('r') {
						goto l68
					}
					position++
					goto l67
				l68:
					position, tokenIndex = position67, tokenIndex67
					if buffer[position] != rune('R') {
						goto l57
					}
					position++
				}
			l67:
				{
					position69, tokenIndex69 := position, tokenIndex
					if buffer[position] != rune('n') {
						goto l70
					}
					position++
					goto l69
				l70:
					position, tokenIndex = position69, tokenIndex69
					if buffer[position] != rune('N') {
						goto l57
					}
					position++
				}
			l69:
				if !_rules[ruleAssignable]() {
					goto l57
				}
				add(ruleReturn, position58)
			}
			return true
		l57:
			position, tokenIndex = position57, tokenIndex57
			return false
		},
		/* 9 Assignation <- <(ComputedPropertyUnderef (':' Type)? '=' Assignable)> */
		func() bool {
			position71, tokenIndex71 := position, tokenIndex
			{
				position72 := position
				if !_rules[ruleComputedPropertyUnderef]() {
					goto l71
				}
				{
					position73, tokenIndex73 := position, tokenIndex
					if buffer[position] != rune(':') {
						goto l73
					}
					position++
					if !_rules[ruleType]() {
						goto l73
					}
					goto l74
				l73:
					position, tokenIndex = position73, tokenIndex73
				}
			l74:
				if buffer[position] != rune('=') {
					goto l71
				}
				position++
				if !_rules[ruleAssignable]() {
					goto l71
				}
				add(ruleAssignation, position72)
			}
			return true
		l71:
			position, tokenIndex = position71, tokenIndex71
			return false
		},
		/* 10 Assignable <- <(New / Operation / Object / FunctionDeclaration / Array / FunctionCall / ComputedProperty / Literal)> */
		func() bool {
			position75, tokenIndex75 := position, tokenIndex
			{
				position76 := position
				{
					position77, tokenIndex77 := position, tokenIndex
					if !_rules[ruleNew]() {
						goto l78
					}
					goto l77
				l78:
					position, tokenIndex = position77, tokenIndex77
					if !_rules[ruleOperation]() {
						goto l79
					}
					goto l77
				l79:
					position, tokenIndex = position77, tokenIndex77
					if !_rules[ruleObject]() {
						goto l80
					}
					goto l77
				l80:
					position, tokenIndex = position77, tokenIndex77
					if !_rules[ruleFunctionDeclaration]() {
						goto l81
					}
					goto l77
				l81:
					position, tokenIndex = position77, tokenIndex77
					if !_rules[ruleArray]() {
						goto l82
					}
					goto l77
				l82:
					position, tokenIndex = position77, tokenIndex77
					if !_rules[ruleFunctionCall]() {
						goto l83
					}
					goto l77
				l83:
					position, tokenIndex = position77, tokenIndex77
					if !_rules[ruleComputedProperty]() {
						goto l84
					}
					goto l77
				l84:
					position, tokenIndex = position77, tokenIndex77
					if !_rules[ruleLiteral]() {
						goto l75
					}
				}
			l77:
				add(ruleAssignable, position76)
			}
			return true
		l75:
			position, tokenIndex = position75, tokenIndex75
			return false
		},
		/* 11 New <- <(('n' / 'N') ('e' / 'E') ('w' / 'W') Identifier '(' Argument* ')')> */
		func() bool {
			position85, tokenIndex85 := position, tokenIndex
			{
				position86 := position
				{
					position87, tokenIndex87 := position, tokenIndex
					if buffer[position] != rune('n') {
						goto l88
					}
					position++
					goto l87
				l88:
					position, tokenIndex = position87, tokenIndex87
					if buffer[position] != rune('N') {
						goto l85
					}
					position++
				}
			l87:
				{
					position89, tokenIndex89 := position, tokenIndex
					if buffer[position] != rune('e') {
						goto l90
					}
					position++
					goto l89
				l90:
					position, tokenIndex = position89, tokenIndex89
					if buffer[position] != rune('E') {
						goto l85
					}
					position++
				}
			l89:
				{
					position91, tokenIndex91 := position, tokenIndex
					if buffer[position] != rune('w') {
						goto l92
					}
					position++
					goto l91
				l92:
					position, tokenIndex = position91, tokenIndex91
					if buffer[position] != rune('W') {
						goto l85
					}
					position++
				}
			l91:
				if !_rules[ruleIdentifier]() {
					goto l85
				}
				if buffer[position] != rune('(') {
					goto l85
				}
				position++
			l93:
				{
					position94, tokenIndex94 := position, tokenIndex
					if !_rules[ruleArgument]() {
						goto l94
					}
					goto l93
				l94:
					position, tokenIndex = position94, tokenIndex94
				}
				if buffer[position] != rune(')') {
					goto l85
				}
				position++
				add(ruleNew, position86)
			}
			return true
		l85:
			position, tokenIndex = position85, tokenIndex85
			return false
		},
		/* 12 ComputedProperty <- <(Identifier (BraceComputedProperty / DotComputedProperty)?)> */
		func() bool {
			position95, tokenIndex95 := position, tokenIndex
			{
				position96 := position
				if !_rules[ruleIdentifier]() {
					goto l95
				}
				{
					position97, tokenIndex97 := position, tokenIndex
					{
						position99, tokenIndex99 := position, tokenIndex
						if !_rules[ruleBraceComputedProperty]() {
							goto l100
						}
						goto l99
					l100:
						position, tokenIndex = position99, tokenIndex99
						if !_rules[ruleDotComputedProperty]() {
							goto l97
						}
					}
				l99:
					goto l98
				l97:
					position, tokenIndex = position97, tokenIndex97
				}
			l98:
				add(ruleComputedProperty, position96)
			}
			return true
		l95:
			position, tokenIndex = position95, tokenIndex95
			return false
		},
		/* 13 BraceComputedProperty <- <('[' (Operation / FunctionCall / ComputedProperty / Literal) ']' (BraceComputedProperty / DotComputedProperty)?)> */
		func() bool {
			position101, tokenIndex101 := position, tokenIndex
			{
				position102 := position
				if buffer[position] != rune('[') {
					goto l101
				}
				position++
				{
					position103, tokenIndex103 := position, tokenIndex
					if !_rules[ruleOperation]() {
						goto l104
					}
					goto l103
				l104:
					position, tokenIndex = position103, tokenIndex103
					if !_rules[ruleFunctionCall]() {
						goto l105
					}
					goto l103
				l105:
					position, tokenIndex = position103, tokenIndex103
					if !_rules[ruleComputedProperty]() {
						goto l106
					}
					goto l103
				l106:
					position, tokenIndex = position103, tokenIndex103
					if !_rules[ruleLiteral]() {
						goto l101
					}
				}
			l103:
				if buffer[position] != rune(']') {
					goto l101
				}
				position++
				{
					position107, tokenIndex107 := position, tokenIndex
					{
						position109, tokenIndex109 := position, tokenIndex
						if !_rules[ruleBraceComputedProperty]() {
							goto l110
						}
						goto l109
					l110:
						position, tokenIndex = position109, tokenIndex109
						if !_rules[ruleDotComputedProperty]() {
							goto l107
						}
					}
				l109:
					goto l108
				l107:
					position, tokenIndex = position107, tokenIndex107
				}
			l108:
				add(ruleBraceComputedProperty, position102)
			}
			return true
		l101:
			position, tokenIndex = position101, tokenIndex101
			return false
		},
		/* 14 DotComputedProperty <- <('.' ComputedProperty)> */
		func() bool {
			position111, tokenIndex111 := position, tokenIndex
			{
				position112 := position
				if buffer[position] != rune('.') {
					goto l111
				}
				position++
				if !_rules[ruleComputedProperty]() {
					goto l111
				}
				add(ruleDotComputedProperty, position112)
			}
			return true
		l111:
			position, tokenIndex = position111, tokenIndex111
			return false
		},
		/* 15 ComputedPropertyUnderef <- <(Identifier (BraceComputedPropertyUnderef / DotComputedPropertyUnderef)?)> */
		func() bool {
			position113, tokenIndex113 := position, tokenIndex
			{
				position114 := position
				if !_rules[ruleIdentifier]() {
					goto l113
				}
				{
					position115, tokenIndex115 := position, tokenIndex
					{
						position117, tokenIndex117 := position, tokenIndex
						if !_rules[ruleBraceComputedPropertyUnderef]() {
							goto l118
						}
						goto l117
					l118:
						position, tokenIndex = position117, tokenIndex117
						if !_rules[ruleDotComputedPropertyUnderef]() {
							goto l115
						}
					}
				l117:
					goto l116
				l115:
					position, tokenIndex = position115, tokenIndex115
				}
			l116:
				add(ruleComputedPropertyUnderef, position114)
			}
			return true
		l113:
			position, tokenIndex = position113, tokenIndex113
			return false
		},
		/* 16 BraceComputedPropertyUnderef <- <('[' (Operation / FunctionCall / ComputedPropertyUnderef / Literal) ']' (BraceComputedPropertyUnderef / DotComputedPropertyUnderef)?)> */
		func() bool {
			position119, tokenIndex119 := position, tokenIndex
			{
				position120 := position
				if buffer[position] != rune('[') {
					goto l119
				}
				position++
				{
					position121, tokenIndex121 := position, tokenIndex
					if !_rules[ruleOperation]() {
						goto l122
					}
					goto l121
				l122:
					position, tokenIndex = position121, tokenIndex121
					if !_rules[ruleFunctionCall]() {
						goto l123
					}
					goto l121
				l123:
					position, tokenIndex = position121, tokenIndex121
					if !_rules[ruleComputedPropertyUnderef]() {
						goto l124
					}
					goto l121
				l124:
					position, tokenIndex = position121, tokenIndex121
					if !_rules[ruleLiteral]() {
						goto l119
					}
				}
			l121:
				if buffer[position] != rune(']') {
					goto l119
				}
				position++
				{
					position125, tokenIndex125 := position, tokenIndex
					{
						position127, tokenIndex127 := position, tokenIndex
						if !_rules[ruleBraceComputedPropertyUnderef]() {
							goto l128
						}
						goto l127
					l128:
						position, tokenIndex = position127, tokenIndex127
						if !_rules[ruleDotComputedPropertyUnderef]() {
							goto l125
						}
					}
				l127:
					goto l126
				l125:
					position, tokenIndex = position125, tokenIndex125
				}
			l126:
				add(ruleBraceComputedPropertyUnderef, position120)
			}
			return true
		l119:
			position, tokenIndex = position119, tokenIndex119
			return false
		},
		/* 17 DotComputedPropertyUnderef <- <('.' ComputedPropertyUnderef)> */
		func() bool {
			position129, tokenIndex129 := position, tokenIndex
			{
				position130 := position
				if buffer[position] != rune('.') {
					goto l129
				}
				position++
				if !_rules[ruleComputedPropertyUnderef]() {
					goto l129
				}
				add(ruleDotComputedPropertyUnderef, position130)
			}
			return true
		l129:
			position, tokenIndex = position129, tokenIndex129
			return false
		},
		/* 18 Object <- <(ObjectInline / ObjectBlock)> */
		func() bool {
			position131, tokenIndex131 := position, tokenIndex
			{
				position132 := position
				{
					position133, tokenIndex133 := position, tokenIndex
					if !_rules[ruleObjectInline]() {
						goto l134
					}
					goto l133
				l134:
					position, tokenIndex = position133, tokenIndex133
					if !_rules[ruleObjectBlock]() {
						goto l131
					}
				}
			l133:
				add(ruleObject, position132)
			}
			return true
		l131:
			position, tokenIndex = position131, tokenIndex131
			return false
		},
		/* 19 ObjectInline <- <(('{' ObjectProperty? '}') / ObjectProperty)> */
		func() bool {
			position135, tokenIndex135 := position, tokenIndex
			{
				position136 := position
				{
					position137, tokenIndex137 := position, tokenIndex
					if buffer[position] != rune('{') {
						goto l138
					}
					position++
					{
						position139, tokenIndex139 := position, tokenIndex
						if !_rules[ruleObjectProperty]() {
							goto l139
						}
						goto l140
					l139:
						position, tokenIndex = position139, tokenIndex139
					}
				l140:
					if buffer[position] != rune('}') {
						goto l138
					}
					position++
					goto l137
				l138:
					position, tokenIndex = position137, tokenIndex137
					if !_rules[ruleObjectProperty]() {
						goto l135
					}
				}
			l137:
				add(ruleObjectInline, position136)
			}
			return true
		l135:
			position, tokenIndex = position135, tokenIndex135
			return false
		},
